# project

./: .coverage  main.py  pyproject.toml
homework/: get.py  index_of.py  slice.py
pytest_project/: get_val.py  set_.py
tests/: .coverage  test_get.py  test_get_val.py  test_index_of.py  test_set_.py  test_slice.py
