[tool.poetry]
name = "pytest-project"
version = "0.1.0"
description = ""
authors = ["Константин Шамонов <razlionx@yandex.ru>"]
readme = "README.md"
packages = [{include = "pytest_project"}]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
