[tool.poetry]
name = "homework"
version = "0.1.0"
description = ""
authors = ["Константин Шамонов <razlionx@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
